# Stratum-Pro-Plus-XL-Super-Pro-Max-Ultra-Mega-Deluxe-Ultimate-Edition

./: Cargo.toml  README.md  STRATUM_ROADMAP.md  flake.nix
contrib/: river-init
crates/stratum-config/: Cargo.toml
crates/stratum-config/src/: defaults.rs  lib.rs  schema.rs  watcher.rs
crates/stratum-ipc/: Cargo.toml
crates/stratum-ipc/src/: lib.rs  messages.rs
crates/stratum-session/: Cargo.toml
crates/stratum-session/src/: main.rs
crates/stratum-settings/: Cargo.toml
crates/stratum-settings/src/: app.rs  main.rs
crates/stratum-settings/src/tabs/: appearance.rs  decorations.rs  keybindings.rs  mod.rs
crates/stratum-shell/: Cargo.toml
crates/stratum-shell/src/: app.rs  ipc.rs  main.rs
crates/stratum-shell/src/launcher/: mod.rs  view.rs
crates/stratum-shell/src/panel/: mod.rs
crates/stratum-shell/src/panel/widgets/: battery.rs  clock.rs  mod.rs  network.rs  window_title.rs
crates/stratum-wm/: Cargo.toml  build.rs
crates/stratum-wm/src/: animation.rs  keybinds.rs  main.rs  output.rs  protocol.rs  seat.rs  state.rs  window.rs
crates/stratum-wm/src/decorations/: mod.rs  renderer.rs  shm.rs
crates/stratum-wm/src/layout/: bsp.rs  floating.rs  mod.rs  tiling.rs
data/: default-config.toml  stratum-settings.desktop  stratum.desktop
pkg/: PKGBUILD
