[workspace]
members = [
    "crates/stratum-wm",
    "crates/stratum-shell",
    "crates/stratum-settings",
    "crates/stratum-config",
    "crates/stratum-ipc",
    "crates/stratum-session",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
tokio       = { version = "1", features = ["full"] }
thiserror   = "2"
anyhow      = "1"
