[package]
name = "stratum-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
stratum-config  = { path = "../stratum-config" }
stratum-ipc     = { path = "../stratum-ipc" }

iced            = { version = "0.13", features = ["tokio"] }
iced_layershell = "0.8"
wayland-client  = "0.31"

chrono          = { version = "0.4", default-features = false, features = ["clock"] }
tokio           = { workspace = true }
anyhow          = { workspace = true }
